examples/c/error-codes/violates-constraint/fatal/CV-TDL3-bad-static.output
CV-TDL3-bad-static.c:6:14: error: redeclaration has different alignment requirement (4 vs 8)
      extern _Alignas(4) int x;
             ^
CV-TDL3-bad-static.c:3:1: note: previous declaration is here
_Alignas(8) int x = 42;
^
1 error generated.
Translation failed (kcc_config dumped). To repeat, run this command in directory fatal:
